# work

./: Makefile  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/api/dependency/: route.ts
app/api/deploy/: route.ts
app/api/download/: route.ts
app/api/idl/: route.ts
app/api/validator/: route.ts
app/api/wallet/: route.ts
app/builder/: page.tsx
app/editor/: page.tsx
app/network-tools/: page.tsx
app/token-manager/: page.tsx
app/visualizer/: page.tsx
components/: ActionCenter.tsx  AppWalletProvider.tsx  CodeEditor.tsx  Console.tsx  DeployPanel.tsx  EditorTabs.tsx  FileExplorer.tsx  InstructionQueue.tsx  InteractionPanel.tsx  LibraryDrawer.tsx  LogViewer.tsx  NetworkStatus.tsx  NetworkSwitcher.tsx  ToolsLayout.tsx  ToolsNav.tsx  TopBar.tsx  ValidatorControl.tsx  WalletConnect.tsx
components/builder/: CustomNodes.tsx  Sidebar.tsx
server/: Cargo.toml
server/src/: main.rs
solana-workspace/: Anchor.toml  Cargo.toml  deploy-wallet.json
solana-workspace/programs/solana_workspace/: Cargo.toml
solana-workspace/programs/solana_workspace/src/: lib.rs
solana-workspace/programs/solana_workspace/src/instructions/: increment.rs
solana-workspace/programs/solana_workspace/src/state/: counter.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1769859172125840  MANIFEST-000021
utils/: solanaDeploy.ts
(+2 files in other folders)
