[package]
name = "builder-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.21"
tempfile = "3.8"
anyhow = "1.0"
fs_extra = "1.3"
