[package]
name = "solana_workspace"
version = "0.1.0"
description = "Solana Contract Workspace"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "solana_workspace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
